--- a/LocalSNSClient/package.json
+++ b/LocalSNSClient/package.json
@@ -11,6 +11,7 @@
     "expo": "~36.0.0",
     "expo-cli": "^3.11.1",
     "expo-constants": "^8.0.0",
+    "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
